// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.ColorPicker interface editable(setStatecallback) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
  >
    <Button
      className="uu-forms-gkss1w"
      disabled={true}
      id="idColorPicker-button"
      key="input-button"
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface editable(setStatecallback) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getChangeFeedback() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getFeedBack() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getFeedBack() 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getInputWrapper(inpuid) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getLabel(idinput) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getMessage() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getValue() should return value 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface getValue() value is empty. Should return empty string. 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isError() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Error message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-red uu5-forms-button-error"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isError() 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="success message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isInitial() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isInitial() 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Error messagess"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-red uu5-forms-button-error"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isInput() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isLoading() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isReadOnly() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isReadOnly() 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
  >
    <Button
      className="uu-forms-gkss1w"
      disabled={true}
      id="idColorPicker-button"
      key="input-button"
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isSuccess() fisr return false, second return true 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="This is success message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isWarning() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="warning"
    message="Warning message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-orange"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface isWarning() 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="success message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface readOnly(setStatecallback) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface readOnly(setStatecallback) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
  >
    <Button
      className="uu-forms-gkss1w"
      disabled={true}
      id="idColorPicker-button"
      key="input-button"
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface reset(setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-read-only uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="New Message"
    readonly={true}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      disabled={true}
      id="idColorPicker-button"
      key="input-button"
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface reset(setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setChangeFeedback() 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Error message from setChangeFeedback"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-red uu5-forms-button-error"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="wrong value"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setEditableValue(false, setStateCallback) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setEditableValue(false, setStateCallback) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
  >
    <Button
      className="uu-forms-gkss1w"
      disabled={true}
      id="idColorPicker-button"
      key="input-button"
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setEditableValue(true, setStateCallback) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setEditableValue(true, setStateCallback) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setError(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setError(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="This is error mesage"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-red uu5-forms-button-error"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setFeedBack(feedback, message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setFeedBack(feedback, message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="This is valid message."
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setInitial(msg, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="This input is required"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-red uu5-forms-button-error"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setInitial(msg, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    message="Initial Message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setLoading(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setLoading(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="loading"
    message="Loading messsagess"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      disabled={true}
      id="idColorPicker-button"
      key="input-button"
      ref_={[Function]}
    >
      <Loading
        className="uu-forms-1ncbayi uu5-forms-input-loading-icon"
        id="idColorPicker"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setMessage(msg, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setMessage(msg, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    message="New Message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setSuccess(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setSuccess(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="This is success message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-green"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setValue(value,setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setValue(value,setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setWarning(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.ColorPicker interface setWarning(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-color-picker uu5-forms-input uu5-forms-input-s uu5-forms-input-warning uu5-forms-input-icon uu5-forms-input-prevent-wrap"
  id="idColorPicker"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="color"
    for="idColorPicker-label"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="warning"
    message="This is warning message"
    readonly={false}
  >
    <Button
      className="uu-forms-gkss1w color-schema-orange"
      id="idColorPicker-button"
      key="input-button"
      onClick={[Function]}
      ref_={[Function]}
    >
      <ColorPreview
        borderRadius={null}
        color="#FFFFFF"
        size="s"
        width={24}
      />
      <Icon
        icon="mdi-menu-down"
      />
      <span
        className="uu5-common-hidden"
      />
    </Button>
  </InputWrapper>
</div>
`;
